added video background

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="wrapper">
 
         <!-- HEADER -->
-        <header id="header" class="">
+        <header id="header" class="header-transparent header-dark header-fullwidth">
             <div id="header-wrap">
                 <div class="container">
 
@@ -83,13 +83,8 @@
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
                                     <li class="dropdown"> <a href="staff.html">About Us</a>
-                                        <ul class="dropdown-menu">
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
-                                        <ul class="dropdown-menu">
-                                        </ul>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="#request-an-estimate">Request An Estimate</a>
 
@@ -106,33 +101,23 @@
         </header>
         <!-- END: HEADER -->
 
-        <!-- SLIDER -->
-        <section id="slider" class="no-padding">
-            <div class="boxed-slider">
-
-                <div style="background-image:url('homepages/car-service/images/1.jpg');" class="owl-bg-img">
-
-
-
-                    <!--<div class="container-fullscreen">
-                        <div class="text-middle">
-                            <div class="container">
-                                <div class="col-md-6 text-light slider-content">
-                                    <div class="hero-heading-2 background-colored text-light">
-                                        <h3 class="text-medium m-t-0">TOP NOTCH SERVICE</h3>
-                                        <a class="button button-light rounded" id="call-to-action-button" href="#request-an-estimate">REQUEST AN ESTIMATE</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
-
-                </div>
+		<!-- SECTION IMAGE FULLSCREEN -->
+		<section class="fullscreen background-overlay" data-vide-bg="video/create/create" data-vide-options="position: 0% 50%">
+			<div class="container-fluid">
+				<div class="container-fullscreen">
+					<div class="text-bottom text-center text-light">
+						<i class="fa fa-bullseye"></i>
+						<h3 class="m-b-0">5th Dimension</h3>
+						<h2 class="text-medium m-t-0">COLLISION REPAIR</h2>
+						<p class="lead">Quality Worksmanship, Quality Service</p>
+						<a class="button button-light rounded" href="#">Request an Estimate</a>						
+					</div>
 
 
-            </div>
-        </section>
-        <!-- END: SLIDER -->
+				</div>
+			</div>
+		</section>
+		<!-- END: SECTION IMAGE FULLSCREEN -->
 
         <!-- CALL TO ACTION -->
         <div class="jumbotron jumbotron-fullwidth background-colored text-light m-b-0">
