--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link href="css/color-variations/orange.css" rel="stylesheet" type="text/css" media="screen">
 
     <!-- LOAD GOOGLE FONTS -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800" rel="stylesheet" type="text/css" />
 
     <!-- CSS CUSTOM STYLE -->
     <link rel="stylesheet" type="text/css" href="css/custom.css" media="screen" />
@@ -84,7 +84,7 @@
                                     </li>
                                     <li class="dropdown"> <a href="staff.html">About Us</a>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
+                                    <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>   
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="#request-an-estimate">Request An Estimate</a>
 
@@ -278,7 +278,7 @@
 
         <!-- MAP -->
         <section id="section6" class="no-padding">
-            <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false"></script>
+            <script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyC9llyAtbhfgw9nMHIaaC7NVP_CX9Yu0xI&sensor=false"></script>
             <div class="map" data-map-address="2702 N Mattis Ave, Champaign, IL 61822" data-map-icon="images/markers/marker1.png" data-height-xxs="160"></div>
         </section>
         <!-- END: MAP -->
