--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     <!--NAVIGATION-->
                     <div class="navbar-collapse collapse main-menu-collapse navigation-wrap">
                         <div class="container">
-                            <nav id="mainMenu">
+                            <nav id="mainMenu" class="home-menu">
+                                
                                 <ul class="main-menu nav nav-pills">
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
@@ -278,7 +279,7 @@
 
         <!-- MAP -->
         <section id="section6" class="no-padding">
-            <script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyC9llyAtbhfgw9nMHIaaC7NVP_CX9Yu0xI&sensor=false"></script>
+            <script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyC9llyAtbhfgw9nMHIaaC7NVP_CX9Yu0xI"></script>
             <div class="map" data-map-address="2702 N Mattis Ave, Champaign, IL 61822" data-map-icon="images/markers/marker1.png" data-height-xxs="160"></div>
         </section>
         <!-- END: MAP -->
