fix contact form

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <div class="col-md-5 background-colored text-light p-40">
                         <div class="text-medium">REQUEST AN ESTIMATE</div>
                         <h4>You will recieve a response within the hour.</h4>
-                        <form id="widget-contact-form" action="include/contact-form.php" role="form" method="post">
+                        <form id="widget-contact-form" action="contact-form.php" role="form" method="post">
 
                             <div class="form-group">
                                 <label for="name">Name</label>
