--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 	<![endif]-->
 
     <!-- Template color -->
-    <link href="css/color-variations/blue.css" rel="stylesheet" type="text/css" media="screen" title="blue">
+    <link href="css/color-variations/orange.css" rel="stylesheet" type="text/css" media="screen" title="orange">
 
     <!-- LOAD GOOGLE FONTS -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,800,700,600%7CRaleway:100,300,600,700,800%7CMontserrat:400,700" rel="stylesheet" type="text/css" />
@@ -204,8 +204,8 @@
                         </div>
 
                         <!-- Google map sensor -->
-                        <script type="text/javascript" src="//maps.google.com/maps/api/js?sensor=false"></script>
-                        <div class="map m-t-30" data-map-address="2702 N Mattis Ave, Champaign, IL 61822" data-map-zoom="12" data-map-icon="images/markers/marker2.png" data-map-type="ROADMAP"></div>
+                        <script type="text/javascript" src="//maps.google.com/maps/api/js?key=AIzaSyC9llyAtbhfgw9nMHIaaC7NVP_CX9Yu0xI"></script>
+            <div class="map" data-map-address="2702 N Mattis Ave, Champaign, IL 61822" data-map-icon="images/markers/marker1.png" data-height-xxs="160"></div>
                         <!-- Google map sensor -->
 
                     </div>
