updated video background and staff page

--- a/staff.html
+++ b/staff.html
@@ -8,7 +8,7 @@
 	
 	
 	<link rel="shortcut icon" href="images/favicon.png">
-	<title>POLO | The Multi-Purpose HTML5 Template</title>
+	<title>5th Dimension Collision Repair</title>
 
 	<!-- Bootstrap Core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -112,7 +112,7 @@
 	<div class="container">
 		<div class="page-title col-md-8 text-shadow-dark">
 			<h1 class="text-uppercase text-medium">OUR TEAM</h1>
-			<span>5th Dimension was founded in 2007 and has grown steadily since. Our secret is a focus on great worksmanship and great customer service! We want to make sure every customer has the best experience possible. Here are some of the people you'll be working with:</span>
+			<span>5th Dimension was founded in 2007 and has grown steadily since. Our secret is a focus both on great worksmanship as well as great customer service! We want to make sure every customer has the best experience possible!</span>
 		</div>
 	</div>
 </section>
@@ -122,64 +122,33 @@
 	<div class="container">
 		<div class="heading heading-center">
 			<h2>Founder Team</h2>
-			<span>Pellentesque ipsum erat, facilisis ut venenatis eu, sodales vel dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
+			<span></span>
 		</div>
 
 		<div class="row">
-
-			<div class="col-md-3">
+			<div class="col-md-6">
 
 				<div class="image-box">
 					<img src="images/team/1.jpg" alt="">
 				</div>
-				<div class="image-box-description ">
+				<div class="image-box-description text-center">
 					<h4>Scott Miller</h4>
 					<p class="subtitle">Founder</p>
 					<hr class="line">
 					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
-			<div class="col-md-3">
+			<div class="col-md-6">
 				<div class="image-box">
 					<img alt="" src="images/team/2.jpg">
 				</div>
-				<div class="image-box-description ">
+				<div class="image-box-description text-center">
 					<h4>Ingrid Hampton</h4>
 					<p class="subtitle">Founder</p>
 					<hr class="line">
 					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
 				</div>
 			</div>
-			<div class="col-md-3">
-				<div class="image-box">
-					<img src="images/team/3.jpg" alt="">
-				</div>
-				<div class="image-box-description ">
-					<h4>Ariol Perry</h4>
-					<p class="subtitle">Software Engineer</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
-				</div>
-			</div>
-			<div class="col-md-3">
-				<div class="image-box">
-					<img src="images/team/4.jpg" alt="">
-				</div>
-				<div class="image-box-description ">
-					<h4>Resa Smith</h4>
-					<p class="subtitle">Systems Engineer</p>
-					<hr class="line">
-					<div>Nullam vulputate euis od urna non pharetra thasellus</div>
-				</div>
-			</div>
-
-
-
-
-		</div>
-
-
-
 	</div>
 	<hr class="space">
 	<div class="seperator"><i class="fa fa-chevron-down"></i>
@@ -187,8 +156,8 @@
 	<hr class="space">
 	<div class="container">
 		<div class="heading heading-center">
-			<h2>Development Team</h2>
-			<span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla luctus. Fusce id mi diam, non ornare orci. </span>
+			<h2>Staff</h2>
+			<span>At Fifth Dimension we are lucky to have an extremely talented and experienced staff. Here are some of the people who will be working on your vehicle!</span>
 		</div>
 
 		<div class="row">
@@ -206,7 +175,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img alt="" src="images/team/2.jpg">
+					<img alt="" src="images/team/3.jpg">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Kym Swed</h4>
@@ -217,7 +186,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img src="images/team/3.jpg" alt="">
+					<img src="images/team/7.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Justin Calvin</h4>
@@ -228,7 +197,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img src="images/team/4.jpg" alt="">
+					<img src="images/team/6.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Joe Latham</h4>
@@ -241,7 +210,7 @@
 
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img src="images/team/1.jpg" alt="">
+					<img src="images/team/5.jpg" alt="">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Kriston Rasch</h4>
@@ -252,7 +221,7 @@
 			</div>
 			<div class="col-md-4">
 				<div class="image-box circle-image small">
-					<img alt="" src="images/team/2.jpg">
+					<img alt="" src="images/team/4.jpg">
 				</div>
 				<div class="image-box-description text-center">
 					<h4>Penny Partenhiemer</h4>
