--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <!-- END: HEADER -->
 
 		<!-- SECTION IMAGE FULLSCREEN -->
-		<section class="fullscreen background-overlay" data-vide-bg="video/create/create" data-vide-options="position: 0% 50%">
+		<section class="fullscreen background-overlay" data-vide-bg="video/bg" data-vide-options="position: 0% 50%">
 			<div class="container-fluid">
 				<div class="container-fullscreen">
 					<div class="text-bottom text-center text-light">
