Updated staff and homepage

--- a/index.html
+++ b/index.html
@@ -106,12 +106,11 @@
 		<section class="fullscreen background-overlay" data-vide-bg="video/bg" data-vide-options="position: 0% 50%">
 			<div class="container-fluid">
 				<div class="container-fullscreen">
-					<div class="text-bottom text-center text-light">
-						<i class="fa fa-bullseye"></i>
-						<h3 class="m-b-0">5th Dimension</h3>
-						<h2 class="text-medium m-t-0">COLLISION REPAIR</h2>
+					<div class="text-middle text-center text-light">
+						<!--<h3 class="m-b-0">5th Dimension</h3>-->
+						<h2 class="text-medium m-t-0">5th Dimension Collision Repair</h2>
 						<p class="lead">Quality Worksmanship, Quality Service</p>
-						<a class="button button-light rounded" href="#">Request an Estimate</a>						
+						<a class="button button-light rounded" href="#request-an-estimate">Request an Estimate</a>						
 					</div>
 
 
@@ -129,7 +128,7 @@
                     </div>
                     <div class="col-sm-10">
                         <h3>Remember: It is ALWAYS your choice where to get your car repaired.</h3>
-                        <p>Don't let your insurance company push you around. We can get you an estimate today.</p><a href="#" class="button button-light rounded"><span>Buy POLO</span></a>
+                        <p>Don't let your insurance company push you around. We can get you an estimate today.</p><a href="#request-an-estimate" class="button button-light rounded">Request an Estimate</a>
                     </div>
                 </div>
 
@@ -149,23 +148,23 @@
                 <div class="row">
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/1.png" alt="">
-                        <h3 class="m-b-10">DENT REMOVAL</h3>
+                        <h3 class="m-b-10">BODY & FRAME REPAIR</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
                     </div>
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/2.png" alt="">
-                        <h3 class="m-b-10">FIBERGLASS</h3>
+                        <h3 class="m-b-10">MINOR MECHANICAL REPAIR</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
                     </div>
 
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/3.png" alt="">
-                        <h3 class="m-b-10">FRAME ALIGNMENT</h3>
+                        <h3 class="m-b-10">PAINT SERVICES<hidden>services</hidden></h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
                     </div>
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/4.png" alt="">
-                        <h3 class="m-b-10">PAINT SERVICES</h3>
+                        <h3 class="m-b-10">GREAT CUSTOMER SERVICE</h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
                     </div>
                 </div>
