--- a/our-work.html
+++ b/our-work.html
@@ -75,14 +75,6 @@
 					</div>
 					<!--END: MOBILE MENU -->
 
-
-					<!--TOP SEARCH -->
-					<div id="top-search"> <a id="top-search-trigger"><i class="fa fa-search"></i><i class="fa fa-close"></i></a>
-						<form action="search-results-page.html" method="get">
-							<input type="text" name="q" class="form-control" value="" placeholder="Start typing & press  &quot;Enter&quot;">
-						</form>
-					</div>
-					<!--END: TOP SEARCH -->
                     
                     <!--NAVIGATION-->
                     <div class="navbar-collapse collapse main-menu-collapse navigation-wrap">
@@ -92,16 +84,10 @@
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
                                     <li class="dropdown"> <a href="#">About Us</a>
-                                        <ul class="dropdown-menu">
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
-                                        <ul class="dropdown-menu">
-                                        </ul>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="#">Request An Estimate</a>
-
                                     </li>
                                     <li class="dropdown"> <a href="#">Contact Us</a>
                                     </li>
@@ -339,21 +325,20 @@
 </section>
 <!-- END: SECTION -->
 
-<!-- FOOTER -->
-<footer class="background-dark text-grey" id="footer">
-	<div class="footer-content">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<div class="footer-logo float-left">
-						<img alt="" src="images/logo-sm-dark.png">
-					</div>
-					<p style="margin-top: 12px;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus, orci ipsum gravida tortor, vel interdum mi sapien ut justo. Nulla varius consequat magna, id molestie ipsum volutpat quis. Suspendisse consectetur fringilla luctus. Fusce id mi diam, non ornare orci. Pellentesque ipsum erat, facilisis ut venenatis eu, sodales vel dolor.
-					</p>
+        <!-- FOOTER -->
+        <footer class="background-dark text-grey" id="footer">
 
-				</div>
-			</div>
-			<div class="seperator seperator-dark seperator-simple"></div>
+            <div class="footer-content">
+                <div class="container">
+                    <div class="row text-center">
+                        <img alt="" src="images/logo-sm-dark.png">
+                        <div class="text-center">5th Dimension Collision Repair
+                        </div>
+
+                    </div>
+
+
+                    <div class="seperator seperator-dark seperator-simple"></div>
 			<div class="row">
 
 
@@ -362,21 +347,21 @@
 						<h4 class="widget-title">Contact us</h4>
 						<ul class="list-large list-icons">
 							<li><i class="fa fa-map-marker"></i>
-								<strong>Address:</strong> 795 Folsom Ave, Suite 600
-								<br>San Francisco, CA 94107</li>
-							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (123) 456-7890 </li>
-							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:first.last@example.com">first.last@example.com</a>
+								<strong>Address:</strong> 2702 N Mattis Ave
+								<br>Champaign, IL 61822</li>
+							<li><i class="fa fa-phone"></i><strong>Phone:</strong> (217) 531-2695 </li>
+							<li><i class="fa fa-envelope"></i><strong>Email:</strong> <a href="mailto:smiller@5dcollision.com">smiller@5dcollision.com</a>
 							</li>
-							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00 - 22:00</strong>
-								<br>Saturday, Sunday: <strong>Closed</strong>
+							<li><i class="fa fa-clock-o"></i>Monday - Friday: <strong>08:00am - 5:00pm</strong>
+								<br>Saturday: <strong>8:00am - 12:00pm</strong>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="widget clearfix widget-tweeter">
-     <h4 class="widget-title">Recent Tweets</h4>
-</div>
+                        <h4 class="widget-title">Recent Tweets</h4>
+                    </div>
 				</div>
 
 				<div class="col-md-4">
@@ -423,42 +408,24 @@
 
 				</div>
 
-
-
 			</div>
-
 
 		</div>
 	</div>
-	<div class="copyright-content">
-		<div class="container">
-			<div class="row">
-				<div class="copyright-text col-md-6"> &copy; 2016 POLO - Best HTML5 Template Ever. All Rights Reserved. <a target="_blank" href="http://www.inspiro-media.com">INSPIRO</a>
-				</div>
-				<div class="col-md-6"><div class="social-icons">
-							<ul>
-								<li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-								<li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-								<li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-								<li class="social-pinterest"><a href="#"><i class="fa fa-pinterest"></i></a></li>
-								<li class="social-vimeo"><a href="#"><i class="fa fa-vimeo-square"></i></a></li>
-								<li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-								<li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i></a></li>
-								<li class="social-youtube"><a href="#"><i class="fa fa-youtube-play"></i></a></li>
-								<li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
-							</ul>
-						</div></div>
-			</div>
-		</div>
-	</div>
-</footer>
-<!-- END: FOOTER -->
+            <div class="copyright-content">
+                <div class="container">
+                    <div class="row">
+                        <div class="copyright-text text-center"> &copy; 2017 5th Dimension Collision Repair<br>Website by <a target="_blank" href="http://davidaschiller.com/">Cradle Media</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- END: FOOTER -->
 
 </div>
 <!-- END: WRAPPER -->
 
-<!-- GO TOP BUTTON -->
-<a class="gototop gototop-button" href="#"><i class="fa fa-chevron-up"></i></a>
 
 	<!-- Theme Base, Components and Settings -->
 	<script src="js/theme-functions.js"></script>
