--- a/staff.html
+++ b/staff.html
@@ -55,7 +55,7 @@
 	<div class="wrapper">
 
 		<!-- HEADER -->
-		<header id="header" class="header-transparent">
+		<header id="header" class="">
 			<div id="header-wrap">
 				<div class="container">
 
@@ -107,7 +107,7 @@
 		<!-- END: HEADER -->
     
 <!-- PAGE TITLE -->
-<section style="background: url('images/parallax/18.jpg')" data-stellar-background-ratio="0.9" class="page-title-center page-title-animate page-title-parallax text-light" id="page-title">
+<section style="background: url('images/parallax/18.jpg')" data-stellar-background-ratio="1.5" class="page-title-center page-title-animate page-title-parallax text-light" id="page-title">
 	<div class="background-overlay"></div>
 	<div class="container">
 		<div class="page-title col-md-8 text-shadow-dark">
