new videos and navigation link fixes

--- a/contact.html
+++ b/contact.html
@@ -67,18 +67,6 @@
                     </div>
                     <!--END: MOBILE MENU -->
 
-                    <!--SHOPPING CART -->
-                    <div id="shopping-cart"> <span class="shopping-cart-items">8</span> <a href="shop-cart.html"><i class="fa fa-shopping-cart"></i></a> </div>
-                    <!--END: SHOPPING CART -->
-
-                    <!--TOP SEARCH -->
-                    <div id="top-search"> <a id="top-search-trigger"><i class="fa fa-search"></i><i class="fa fa-close"></i></a>
-                        <form action="search-results-page.html" method="get">
-                            <input type="text" name="q" class="form-control" value="" placeholder="Start typing & press  &quot;Enter&quot;">
-                        </form>
-                    </div>
-                    <!--END: TOP SEARCH -->
-
                     <!--NAVIGATION-->
 <div class="navbar-collapse collapse main-menu-collapse navigation-wrap">
                         <div class="container">
@@ -87,15 +75,10 @@
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
                                     <li class="dropdown"> <a href="staff.html">About Us</a>
-                                        <ul class="dropdown-menu">
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
-                                        <ul class="dropdown-menu">
-                                        </ul>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="#request-an-estimate">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="index.html#request-an-estimate">Request An Estimate</a>
 
                                     </li>
                                     <li class="dropdown"> <a href="#">Contact Us</a>
@@ -115,16 +98,8 @@
             <div class="container">
                 <div class="page-title col-md-8" data-animation="fadeInDown" data-animation-delay="300">
                     <h1>Contact Us</h1>
-                    <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span> </div>
-                <div class="breadcrumb col-md-4" data-animation="fadeInDown" data-animation-delay="800">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-home"></i></a> </li>
-                        <li><a href="#">Home</a> </li>
-                        <li><a href="#">Pages</a> </li>
-                        <li class="active"><a href="#">Contact Us</a> </li>
-                    </ul>
-                </div>
             </div>
+            </div>        
         </section>
         <!-- END: PAGE TITLE -->
 
@@ -317,9 +292,6 @@
 
     </div>
     <!-- END: WRAPPER -->
-
-    <!-- GO TOP BUTTON -->
-    <a class="gototop gototop-button" href="#"><i class="fa fa-chevron-up"></i></a>
 
     <!-- Theme Base, Components and Settings -->
     <script src="js/theme-functions.js"></script>
