--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                     <div class="col-md-3">
                         <img src="homepages/car-service/images/icons/3.png" alt="">
-                        <h3 class="m-b-10">PAINT SERVICES<hidden>services</hidden></h3>
+                        <h3 class="m-b-10">PAINT SERVICES<br><br></h3>
                         <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi sagittis, sem quis lacinia faucibus. </span>
                     </div>
                     <div class="col-md-3">
@@ -188,17 +188,17 @@
                         </p>
                         <div class="accordion toggle fancy clean accordion-transparent">
                             <div class="ac-item">
-                                <h5 class="ac-title">BODY REPAIR</h5>
+                                <h5 class="ac-title">BODY & FRAME REPAIR</h5>
                                 <div class="ac-content">
                                     <h4>Pellentesque ipsum erat</h4> Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
                                 </div>
                             </div>
                             <div class="ac-item">
-                                <h5 class="ac-title">CUSTOM PAINT JOBS</h5>
+                                <h5 class="ac-title">PAINT SERVICES</h5>
                                 <div class="ac-content">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</div>
                             </div>
                             <div class="ac-item">
-                                <h5 class="ac-title">TIRE CHECKUP</h5>
+                                <h5 class="ac-title">MINOR MECHANICAL REPAIR</h5>
                                 <div class="ac-content">
 
                                     <h4>Pellentesque ipsum erat</h4>
@@ -207,7 +207,7 @@
                                 </div>
                             </div>
                             <div class="ac-item">
-                                <h5 class="ac-title">WINTER PREPARE</h5>
+                                <h5 class="ac-title">INCREDIBLE CUSTOMER SERVICE</h5>
                                 <div class="ac-content">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</div>
                             </div>
 
