--- a/our-work.html
+++ b/our-work.html
@@ -83,13 +83,13 @@
                                 <ul class="main-menu nav nav-pills">
                                     <li><a href="index.html"><i class="fa fa-home"></i></a>
                                     </li>
-                                    <li class="dropdown"> <a href="#">About Us</a>
+                                    <li class="dropdown"> <a href="staff.html">About Us</a>
                                     </li>
                                     <li class="dropdown mega-menu-item"> <a href="our-work.html">Our Work</a>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="#">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="index.html#request-an-estimate">Request An Estimate</a>
                                     </li>
-                                    <li class="dropdown"> <a href="#">Contact Us</a>
+                                    <li class="dropdown"> <a href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
                             </nav>
