--- a/staff.html
+++ b/staff.html
@@ -91,7 +91,7 @@
                                         <ul class="dropdown-menu">
                                         </ul>
                                     </li>
-                                    <li class="dropdown mega-menu-item"> <a href="#">Request An Estimate</a>
+                                    <li class="dropdown mega-menu-item"> <a href="index.html#request-an-estimate">Request An Estimate</a>
 
                                     </li>
                                     <li class="dropdown"> <a href="#">Contact Us</a>
@@ -107,8 +107,7 @@
 		<!-- END: HEADER -->
     
 <!-- PAGE TITLE -->
-<section style="background: url('images/parallax/18.jpg')" data-stellar-background-ratio="1.5" class="page-title-center page-title-animate page-title-parallax text-light" id="page-title">
-	<div class="background-overlay"></div>
+        <section id="page-title" class="page-title-parallax page-title-center text-dark" style="background-image:url(images/parallax/page-title-parallax.jpg);">
 	<div class="container">
 		<div class="page-title col-md-8 text-shadow-dark">
 			<h1 class="text-uppercase text-medium">OUR TEAM</h1>
